# jabbar

./: .flake8  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  README.md  README.rst  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: ci.yml  deploy.yml
example/: howto.ipynb
jabbar/: __init__.py  bar.py  version.py
test/: __init__.py  test_basic.py
