#################
# Package setup #
#################

[metadata]
name = jabbar
version = attr: jabbar.version.__version__
description = Just Another Beautiful progress BAR
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/yannikschaelte/jabbar
download_url = https://github.com/yannikschaelte/jabbar/releases
project_urls =
    Bug Tracker = https://github.com/yannikschaelte/jabbar/issues
    Source Code = https://github.com/yannikschaelte/jabbar
    Documentation = https://github.com/yannikschaelte/jabbar

# Author information
author = Yannik Schaelte
author_email = yannik.schaelte@gmail.com
maintainer = Yannik Schaelte
maintainer_email = yannik.schaelte@gmail.com

# License information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
keywords =
    Progress bar
    Status bar
    Jabberwocky

[options]
python_requires = >=3.6
setup_requires = setuptools
packages = find:
